--- a/logincss.css
+++ b/logincss.css
@@ -79,3 +79,25 @@ input:focus {
     background-color: white;
     
 }
+@media only screen and (max-height: 915px){
+    .login{
+        height: 450px;
+        
+    }
+}
+@media only screen and (max-width: 912px) {
+    .one{
+        width: 0;
+        height: 0;
+    }
+    .two{
+        width: 100%;
+    }
+    .login{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 0px;
+        
+    }
+}
